j8 compatibility added